--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,37 @@
 {
-  "compilerOptions": {
-    "target": "ESNext",
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "types": ["vite/client"],
-    "allowJs": false,
-    "skipLibCheck": false,
-    "esModuleInterop": false,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react"
-  },
-  "include": ["./src"],
-  "exclude": ["node_modules"]
+	"compilerOptions": {
+		"target": "ESNext",
+		"lib": ["DOM", "DOM.Iterable", "ESNext"],
+		"types": ["vite/client", "node"],
+		"allowJs": false,
+		"skipLibCheck": false,
+		"esModuleInterop": false,
+		"allowSyntheticDefaultImports": true,
+		"strict": true,
+		"forceConsistentCasingInFileNames": true,
+		"module": "ESNext",
+		"moduleResolution": "Node",
+		"resolveJsonModule": true,
+		"isolatedModules": true,
+		"noEmit": true,
+		"jsx": "react",
+		"baseUrl": "src",
+		"paths": {
+			"@config": ["config"],
+			"@store": ["store"],
+			"@store/*": ["store/*"],
+			"@typings/*": ["typings/*"],
+			"@utils": ["shared/utils"],
+			"@utils/*": ["shared/utils/*"],
+			"@components/*": ["shared/components/*"],
+			"@hooks": ["shared/hooks"],
+			"@hooks/*": ["shared/hooks/*"],
+			"@modules/*": ["modules/*"],
+			"@router": ["router"]
+		},
+		"emitDecoratorMetadata": true,
+		"experimentalDecorators": true
+	},
+	"include": ["./src"],
+	"exclude": ["node_modules"]
 }
