--- a/.eslintrc
+++ b/.eslintrc
@@ -37,6 +37,7 @@
 		"simple-import-sort/imports": "error",
 		"simple-import-sort/exports": "error",
 		"no-unused-vars": "off",
-		"prefer-arrow-callback": "warn"
+		"prefer-arrow-callback": "warn",
+		"eqeqeq": "error"
 	}
 }
