--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"build": "tsc && vite build",
 		"serve": "vite preview",
 		"lint:fix": "eslint ./src --ext .jsx,.js,.ts,.tsx --quiet --fix --ignore-path ./.gitignore",
+		"lint:staged": "lint-staged",
 		"lint:format": "prettier  --loglevel warn --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\" ",
 		"lint": "yarn lint:format && yarn lint:fix ",
 		"type-check": "tsc",
@@ -36,11 +37,15 @@
 		"eslint-plugin-react-hooks": "^4.2.0",
 		"eslint-plugin-simple-import-sort": "^7.0.0",
 		"husky": "^7.0.2",
+		"lint-staged": ">=10",
 		"pre-commit": "^1.2.2",
 		"prettier": "^2.2.1",
 		"typescript": "^4.1.2",
 		"vite": "^2.1.0"
 	},
 	"pre-commit": "lint",
-	"license": "MIT"
+	"license": "MIT",
+	"lint-staged": {
+		"*.ts": "eslint --cache --fix"
+	}
 }
