--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
 	"dependencies": {
 		"@babel/preset-react": "^7.14.5",
 		"@reduxjs/toolkit": "^1.6.1",
+		"@types/react-router-dom": "^5.1.8",
 		"class-validator": "^0.13.1",
 		"react": "^17.0.0",
 		"react-dom": "^17.0.0",
 		"react-redux": "^7.2.4",
+		"react-router-dom": "^5.2.1",
 		"vite-tsconfig-paths": "^3.3.13"
 	},
 	"devDependencies": {
