--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "vite-reactts-eslint-prettier",
-	"version": "0.0.0",
+	"name": "vite-react-starter",
+	"version": "0.1.0",
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
@@ -49,5 +49,6 @@
 	"license": "MIT",
 	"lint-staged": {
 		"*.ts": "eslint --cache --fix"
-	}
+	},
+	"homepage": "https://github.com/Blerr511/vite-react-starter"
 }
